// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decorator-auto-accessors-new-line.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
  accessor
  ["bar"];
}

class Foo {
  static accessor
  bar;
}

class Foo {
  accessor
  bar;
}

=====================================output=====================================
class Foo {
  accessor;
  ["bar"];
}

class Foo {
  static accessor;
  bar;
}

class Foo {
  accessor;
  bar;
}

================================================================================
`;

exports[`decorator-auto-accessors-type-annotations.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
abstract class Foo {
  accessor prop: number = 1;
  static accessor prop2: number = 1;
  accessor #prop3: number = 1;
  accessor [prop4]: number = 1;
  private accessor prop5: number = 1;
  abstract accessor prop6: number;
}

=====================================output=====================================
abstract class Foo {
  accessor prop: number = 1;
  static accessor prop2: number = 1;
  accessor #prop3: number = 1;
  accessor [prop4]: number = 1;
  private accessor prop5: number = 1;
  abstract accessor prop6: number;
}

================================================================================
`;
